<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_hint"/>
    <EditText
        android:id="@+id/txt_pers_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_fio_hint"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_phone_hint"
        android:inputType="phone"/>
    <EditText
        android:id="@+id/txt_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_number_hint"
        android:inputType="number"/>
    <EditText
        android:id="@+id/num_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_num_password_hint"
        android:inputType="numberPassword"/>
    <EditText
        android:id="@+id/txt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_password_hint"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_email"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_date_time"
        android:inputType="datetime"/>
    <CalendarView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:id="@+id/calendar"/>

</LinearLayout>