<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_view_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt1"
        android:textSize="24sp"
        android:layout_margin="5dp" />

    <EditText
        android:id="@+id/txt_edit_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:hint="@string/hint_text_1"
        android:layout_margin="5dp" />

    <Button
        android:id="@+id/btn1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:background="@color/black"
        android:textStyle="italic"
        android:padding="15dp" />
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:text="@string/on_off"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_properties"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>
    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:background="@color/white"/>
    <Button
        android:id="@+id/btn2"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        android:background="@color/black"
        android:textStyle="italic"
        android:padding="15dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>